@@ -18,11 +18,7 @@ namespace FBB
         OptStruct *d_opt;
         
         public:
-            OptStructArray(size_t n)
-            :
-                d_n(n),
-                d_opt(new OptStruct[n])
-            {}
+            OptStructArray(size_t n);
 
             ~OptStructArray()
             {
